# octocode

./: .dockerignore  .gitignore  .noindex  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  INSTALL.md  INSTRUCTIONS.md  LICENSE  Makefile  README.md  install.sh  rust-toolchain.toml  test_rust_analyzer_only.sh
.cargo/: config.toml
.github/workflows/: ci.yml  dependencies.yml  deploy-website.yml  release.yml
config-templates/: default.toml
doc/: ADVANCED_USAGE.md  API_KEYS.md  ARCHITECTURE.md  COMMANDS.md  CONFIGURATION.md  CONTRIBUTING.md  GETTING_STARTED.md  LSP_INTEGRATION.md  MCP_INTEGRATION.md  MEMORY_SYSTEM.md  PERFORMANCE.md  RELEASE_MANAGEMENT.md
scripts/: format.sh  install-completions.sh  test-completions.sh
src/: config.rs  constants.rs  lib.rs  main.rs  reranker.rs  state.rs  storage.rs  store.rs  watcher_config.rs
src/commands/: clear.rs  commit.rs  config.rs  debug.rs  format.rs  graphrag.rs  index.rs  logs.rs  mcp.rs  mcp_proxy.rs  memory.rs  mod.rs  models.rs  output_format.rs  release.rs  review.rs  search.rs  view.rs  watch.rs
src/commands/format/: utils.rs
src/embedding/: mod.rs  provider.rs  tests.rs  types.rs
src/embedding/provider/: fastembed.rs  google.rs  huggingface.rs  jina.rs  mod.rs  openai.rs  sentence_transformer.rs  voyage.rs
src/embedding/provider/tei/: decode.rs  embed.rs  health.rs  mod.rs  predict.rs  rerank.rs  similarity.rs  tokenize.rs  types.rs
src/indexer/: batch_processor.rs  code_region_extractor.rs  differential_processor.rs  embed.rs  file_processor.rs  file_utils.rs  git_utils.rs  graph_optimization.rs  graphrag.rs  markdown_processor.rs  mod.rs  path_utils.rs  render_utils.rs  search.rs  signature_extractor.rs  text_processing.rs
src/indexer/graphrag/: ai.rs  builder.rs  database.rs  import_resolver.rs  mod.rs  relationships.rs  tests.rs  types.rs  utils.rs
src/indexer/languages/: bash.rs  cpp.rs  css.rs  go.rs  javascript.rs  json.rs  markdown.rs  mod.rs  php.rs  python.rs  resolution_utils.rs  ruby.rs  rust.rs  svelte.rs  typescript.rs
src/mcp/: graphrag.rs  logging.rs  memory.rs  mod.rs  proxy.rs  semantic_code.rs  server.rs  types.rs
src/mcp/lsp/: client.rs  mod.rs  protocol.rs  provider.rs  tools.rs
src/memory/: formatting.rs  git_utils.rs  manager.rs  mod.rs  store.rs  types.rs
src/store/: batch_converter.rs  debug.rs  graphrag.rs  metadata.rs  mod.rs  table_ops.rs  vector_optimizer.rs
website/: index.html  script.js  styles.css
