[package]
name = "octocode"
version = "0.3.0"
edition = "2021"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "Intelligent code indexer and graph builder with semantic search capabilities"
homepage = "https://octocode.muvon.io"
repository = "https://github.com/muvon/octocode"
license = "Apache-2.0"
keywords = ["code", "search", "indexer", "semantic", "graph"]
categories = ["development-tools", "command-line-utilities"]
readme = "README.md"

[features]
default = ["fastembed", "sentence-transformer"]
fastembed = ["dep:fastembed"]
sentence-transformer = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

# Optimized release profile for static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for size
overflow-checks = false # Disable overflow checks in release mode

# Cross-compilation configuration is in .cargo/config.toml

[dependencies]
tokio = { version = "1.45.1", features = ["full"] }
ignore = "0.4.23"
parking_lot = "0.12.3"
lance-table = { version = "0.27.2", default-features = false, features = ["lazy_static"] }
lance = { version = "0.27.2", default-features = false, features = [] }
lancedb = { version = "0.19.1", default-features = false }
arrow = { version = "54.2.1", features = ["prettyprint"] }
serde = { version = "1.0.217", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tree-sitter = "0.24.7"
tree-sitter-php = "0.23.11"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-bash = "0.23.3"
uuid = { version = "1.12.0", features = ["v4"] }
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-svelte-ng = "1.0.2"
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0.95"
serde_json = "1.0.136"
sha2 = "0.10.8"
clap = { version = "4.5.26", features = ["derive"] }
clap_complete = "4.5.39"
notify = "6.1.1"
notify-debouncer-mini = "0.4.1"
fastembed = { version = "4.9.1", optional = true }
toml = "0.8.14"
lazy_static = "1.4.0"
futures = "0.3.31"
globset = "0.4.16"
regex = "1.11.1"
dirs = "5.0.1"
# Candle dependencies for SentenceTransformer support (optional)
candle-core = { version = "0.8.3", optional = true }
candle-nn = { version = "0.8.3", optional = true }
candle-transformers = { version = "0.8.3", optional = true }
tokenizers = { version = "0.20.3", optional = true }
hf-hub = { version = "0.3.2", features = ["tokio"], optional = true }
# EditorConfig parsing and formatting
ec4rs = "1.2.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
tiktoken-rs = "0.6.0"
# LSP integration dependencies
lsp-types = "0.97.0"
url = "2.4.1"

[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path
