[package]
name = "octocode"
version = "0.7.1"
edition = "2021"
rust-version = "1.82"
authors = ["Muvon Un Limited <opensource@muvon.io>"]
description = "AI-powered code indexer with semantic search, GraphRAG knowledge graphs, and MCP server for multi-language codebases"
homepage = "https://octocode.muvon.io"
repository = "https://github.com/muvon/octocode"
documentation = "https://docs.rs/octocode"
license = "Apache-2.0"
keywords = ["ai", "semantic-search", "code-analysis", "graphrag", "mcp-server"]
categories = ["development-tools", "command-line-utilities", "parsing", "text-processing", "algorithms"]
readme = "README.md"
exclude = [
    "tests/fixtures/*",
    "examples/*",
    ".github/*",
    "docs/*",
    "scripts/*",
    "*.md",
    "install.sh"
]

[features]
default = ["fastembed", "huggingface"]
fastembed = ["dep:fastembed"]
huggingface = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]


# Cross-compilation configuration is in .cargo/config.toml

# Optimized release profile for static linking
[profile.release]
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units for better optimization
panic = "abort"         # Abort on panic for smaller binary size
strip = true            # Strip symbols from binary
opt-level = "z"         # Optimize for size
overflow-checks = false # Disable overflow checks in release mode


[profile.dev]
opt-level = 1          # Basic optimizations without slowing compilation too much
debug = true           # Keep debug symbols for backtraces
debug-assertions = true # Keep runtime checks
overflow-checks = true  # Keep overflow checks
lto = false            # Disable Link Time Optimization to speed up builds
codegen-units = 256    # Use more codegen units for faster parallel compilation
incremental = true     # Enable incremental compilation
rpath = false          # Disable runtime search path


[dependencies]
# Common
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros", "time", "sync", "io-util", "io-std", "process"] }
async-trait = "0.1"
anyhow = "1.0.98"
lazy_static = "1.5.0"
serde = { version = "1.0.219", features = ["derive"] }
futures = { version = "0.3.31", default-features = false, features = ["std"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
tracing-appender = "0.2.3"
bon = "3.4.0"

# Types
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
url = "2.5.4"
uuid = { version = "1.17.0", default-features = false, features = ["v4"] }

# Tree-Sitter
tree-sitter = "0.25.6"
tree-sitter-php = "0.23.11"
tree-sitter-rust = "0.23.2"
tree-sitter-python = "0.23.6"
tree-sitter-javascript = "0.23.1"
tree-sitter-json = "0.24.8"
tree-sitter-go = "0.23.4"
tree-sitter-cpp = "0.23.4"
tree-sitter-bash = "0.25.0"
tree-sitter-css = "0.23.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-ruby = "0.23.1"
tree-sitter-svelte-ng = "1.0.2"

ignore = "0.4.23"
parking_lot = "0.12.4"

reqwest = { version = "0.12.20", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.140"
sha2 = "0.10.9"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5.54"
notify = { version = "8.0.0", default-features = false, features = ["crossbeam-channel", "macos_fsevent"] }
notify-debouncer-mini = "0.6.0"
toml = "0.8.23"
globset = { version = "0.4.16", default-features = false }
regex = { version = "1.11.1", default-features = false, features = ["std"] }
dirs = "6.0.0"
# EditorConfig parsing and formatting
ec4rs = "1.2.0"
# LSP integration dependencies
lsp-types = "0.97.0"
dotenvy = "0.15"

# AI
tiktoken-rs = "0.7.0"
tokenizers = { version = "0.21.2", optional = true }
hf-hub = { version = "0.4.2", features = ["tokio"], optional = true }
fastembed = { version = "4.9.1", optional = true }
# Candle dependencies for HuggingFace support (optional)
candle-core = { version = "0.9.1", optional = true }
candle-nn = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
simsimd = "6.4.9"
# Tei
tei_backend = { package = "text-embeddings-backend", git = "https://github.com/bysensa/text-embeddings-inference.git", features = [
    "candle", "metal", "clap"
] }
tei_backend_core = { package = "text-embeddings-backend-core", git = "https://github.com/bysensa/text-embeddings-inference.git", version = "1.7.2" }
tei_core = { package = "text-embeddings-core", git = "https://github.com/bysensa/text-embeddings-inference.git", version = "1.7.2" }

# Storage
lance-table = { version = "0.30.0", default-features = false, features = ["lazy_static"] }
lance = { version = "0.30.0", default-features = false, features = [] }
lancedb = { version = "0.21.0", default-features = false }
arrow = { version = "55.2.0", default-features = false, features = ["prettyprint"] }
num_cpus = "1.17.0"